# simics-risc-it

./: README.md  risc.simics
modules/mem-mng/: Makefile  mem-mng.dml  module_load.py
modules/myrisc-comp/: Makefile  module_load.py  myrisc_comp.py
modules/sample-components/: Makefile  module_load.py  sample_components.py
modules/sample-risc/: CMakeLists.txt  Makefile  event-queue-types.h  event-queue.c  event-queue.h  module_load_module.py  sample-risc-core.c  sample-risc-core.h  sample-risc-cycle.c  sample-risc-cycle.h  sample-risc-direct-memory.c  sample-risc-exec.c  sample-risc-exec.h  sample-risc-frequency.c  sample-risc-frequency.h  sample-risc-local.h  sample-risc-memory.c  sample-risc-memory.h  sample-risc-queue.c  sample-risc-queue.h  sample-risc-step.c  sample-risc-step.h  sample-risc.c  sample-risc.h  sample_risc_common.py  toy-risc-core.c  toy-risc-core.h
modules/sample-risc/test/: common.py  s-add.py  s-branch-direct.py  s-branch-indirect.py  s-config-sanity.py  s-exec-bp-logical.py  s-exec-bp-physical-nested.py  s-exec-bp-physical.py  s-load-stall.py  s-load.py  s-nop.py  s-read-bp-logical.py  s-read-bp-physical-nested.py  s-read-bp-physical.py  s-store.py  s-write-bp-logical.py  s-write-bp-physical-nested.py  s-write-bp-physical.py  tests.py
targets/: myrisc.simics
targets/cosim/: queues-in-cosimulator.simics
targets/qsp-x86/: firststeps-multi.simics  firststeps-no-network.simics  firststeps.simics  qsp-atom-core.simics  qsp-clear-linux-pcie-demo.simics  qsp-clear-linux.simics  qsp-client-core.simics  qsp-dvd-boot.simics  qsp-hdd-boot.simics  (+3 more)
(+14 files in other folders)
